--- a/Images/projects.html
+++ b/Images/projects.html
@@ -64,7 +64,7 @@
   <div class="projects_container">
     <section class="projects hidden">
       <caption>
-        <img src="./Images/profile.jpg" alt="">
+        <img src="./Images/logo.jpg" alt="">
       </caption>
       <figcaption>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quae in quis sunt nemo reprehenderit qui ad soluta, repellat et.
@@ -76,13 +76,13 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quae in quis sunt nemo reprehenderit qui ad soluta, repellat et.
       </figcaption>
       <caption>
-        <img src="./Images/profile.jpg" alt="">
+        <img src="./Images/logo.jpg" alt="">
       </caption>
     </section>
 
     <section class="projects hidden">
       <caption>
-        <img src="./Images/profile.jpg" alt="">
+        <img src="./Images/logo.jpg" alt="logo">
       </caption>
       <figcaption>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quae in quis sunt nemo reprehenderit qui ad soluta, repellat et.
@@ -94,7 +94,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quae in quis sunt nemo reprehenderit qui ad soluta, repellat et.
       </figcaption>
       <caption>
-        <img src="./Images/profile.jpg" alt="">
+        <img src="./Images/logo.jpg" alt="">
       </caption>
     </section>
   </div>
